--- a/resposta/css/temas.css
+++ b/resposta/css/temas.css
@@ -18,7 +18,7 @@ h1{
         color: rgb(146, 214, 223);
         background-image: url("../imagens/logo.png");
         margin: 0 auto;
-        background-position: 400px;
+        background-position: center;
         background-repeat: no-repeat;
         margin-top: 0px !important;
         margin-bottom: 40px !important;
@@ -27,6 +27,10 @@ h1{
         position: relative;
         top: 20px;
 
+}
+
+h2 {
+    font-size: 25pt;
 }
 
 #login {
@@ -48,6 +52,7 @@ h1{
     padding: 40px;
     border-radius: 10px;
     width:300px;
+    height: 350px;
    /*width:280px*/
    /*padding-top: 10px;*/
 
@@ -80,7 +85,8 @@ h1{
 .card-content label {
 
     color: #fff;
-    font-size: 19px;
+    font-size: 20px;
+    font-weight: bold;
     opacity: 1.0;
     /*font-family: "Anek Telugu";*/
     
@@ -96,6 +102,7 @@ h1{
 
 .card-content-area input {
 
+    font-size: 12pt;
     margin-top: 10px;
     padding:0 5px;
     background-color: transparent;
@@ -117,20 +124,25 @@ h1{
 
 .card-footer .submit{
 
+    font-size: 1.2rem;
+    font-weight: bold;
     width: 100%;
     height: 40px;
     /*background-color: #a13854;*/
     background-color: #087eb4;
     border:none;
+    border-radius: 10px;
     color:#e1e1e1;
     margin: 10px 0;
+    cursor: pointer;
 
 }
 
 .card-footer a {
 
     text-align: center;
-    font-size: 12px;
+    font-size: 14px;
+    font-weight: bold;
     opacity: 0.8;
     color: #fff;
     text-decoration: none;
